<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HometownAndroidActivity!</string>
    <string name="app_name">Hometown Mobile</string>
    <string name="logo">Logo</string>
    <string name="facebook_logo">Facebook_Logo</string>
    <string name="fdic_string">Member FDIC/Member SIF</string>
    <string name="image_table"></string>
    
    <string name="signon">Hometown Online Sign On</string>
    <string name="locations">Locations</string>
	<string name="loan_rates">Deposit Rates</string>
	<string name="mortgage_rates">Mortgage Rates</string>
	<string name="contact_us">Contact Us</string>
	
	<string name="hometown_mobile">Hometown Mobile.</string>
	<string name="banking_should">The Way Banking Should Be.</string>
	
</resources>