<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#d6dfda"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hometown_mobile"
        android:textColor="#034c38"
        android:textSize="13pt" />
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical|center_horizontal"
	    android:text="@string/banking_should"
	    android:textColor="#034c38"
	    android:textStyle="italic"
	    android:textSize="8pt" />
		
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <Button
            android:id="@+id/signOnButtonId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signon"
            android:textColor="#FFFFFF"
            android:textSize="10pt" />

        <Button
			android:id="@+id/locationsButtonId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/locations"
            android:textColor="#FFFFFF"
            android:textSize="10pt" />

        <Button
            android:id="@+id/loanRatesButtonId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loan_rates"
            android:textColor="#FFFFFF"
            android:textSize="10pt" />

        <Button
            android:id="@+id/mortgageRatesButtonId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mortgage_rates"
            android:textColor="#FFFFFF"
            android:textSize="10pt" />

        <Button
            android:id="@+id/contactUsButtonId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="#FFFFFF"
            android:textSize="10pt" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
            	<TextView
		            android:id="@+id/fdic"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"
		            android:layout_weight="0"
		            android:text="@string/fdic_string"
		            android:textSize="5pt" />
            	
            	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            	    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:gravity="right">
	            	<ImageButton
			            android:id="@+id/facebook_logo_image"
			            android:layout_width="50dp"
			            android:layout_height="50dp"
			            android:contentDescription="@string/facebook_logo"
			            android:scaleType="fitCenter"
			            android:src="@drawable/facebook_logo" />
	            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>